Added skill mixing with level for assignments
